# app-starknet-zondax

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: main.yaml  publish.yaml  publish_release.yaml  rust_audit.yaml  rust_periodic_audit.yaml
app/: Cargo.toml  Makefile  Makefile.version
app-derive/: Cargo.toml
app-derive/src/: lib.rs  version.rs
app-derive/tests/: version.rs  version.rs.expanded
app/c/: main.c  rslib.h  utils.c
app/src/: constants.rs  crypto.rs  dispatcher.rs  lib.rs  parser.rs  utils.rs
app/src/handlers/: clear_signing.rs  dev.rs  lock.rs  mod.rs  public_key.rs  signing.rs  utils.rs  version.rs
app/src/handlers/dev/: debug.rs
app/src/handlers/signing/: blind_sign_toggle.rs  felt.rs
app/src/sys/: mod.rs
app/src/utils/: apdu_wrapper.rs  buffer_upload.rs
app/tests/: prelude.rs  public_key.rs  sign.rs  version.rs
docs/: APDU.md  Architecture.excalidraw  build.md  debug.md
hfuzz/: Cargo.toml  apdu.rs
js/: README.md  jest.config.js  package.json  tsconfig.json
js/src/: common.ts  helper.ts  index.ts  types.ts
js/tests/: app.test.ts
speculos/: call_stack.txt  launch_speculos_nanos.sh  launch_speculos_nanos_gdb.sh  launch_speculos_nanosp.sh
zemu/: jest.config.js  node.tsconfig.json  package.json  tsconfig.json
zemu/debug/: debug.mjs
zemu/src/: main.ts
zemu/tests/: common.ts  standard.test.ts
