[package]
name = "starkware-app"
version = "0.1.0"
edition = "2018"
authors = ["Zondax <hello@zondax.ch>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rslib"
crate-type = ["staticlib", "rlib"]

[features]
dev = []
derive-debug = []
blind-sign-toggle = []
default = ["derive-debug", "blind-sign-toggle"]

[dependencies]
bolos = { git = "https://github.com/Zondax/ledger-rust", branch = "feat/lns+" }
zemu-sys = { git = "https://github.com/Zondax/ledger-rust", branch = "feat/lns+" }

no-std-compat = { version = "0.4" }
cfg-if = "1.0.0"
git-testament = { git = "https://github.com/Zondax/git-testament", branch = "fix/cve-2020-26235", version = "0.2.1", default-features = false }

starkware-app-derive = { path = "../app-derive" }
arrayref = "0.3.6"

[dev-dependencies]
no-std-compat = { version = "0.4", features = ["std"] }
serial_test = "0.5"
zuit = { git = "https://github.com/Zondax/ledger-rust", branch = "feat/lns+" }
bolos = { git = "https://github.com/Zondax/ledger-rust", branch = "feat/lns+", features = ["derive-debug"] }
hex = "0.4.3"
